--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ httpx==0.27.2
 idna==3.10
 ipykernel==6.29.5
 ipython==8.28.0
+ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
@@ -44,11 +45,13 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
 kiwisolver==1.4.7
 MarkupSafe==3.0.0
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
 mistune==3.0.2
+mpmath==1.3.0
 nbclient==0.10.0
 nbconvert==7.16.4
 nbformat==5.10.4
@@ -88,6 +91,7 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+sympy==1.13.3
 terminado==0.18.1
 tinycss2==1.3.0
 tornado==6.4.1
@@ -100,3 +104,4 @@ wcwidth==0.2.13
 webcolors==24.8.0
 webencodings==0.5.1
 websocket-client==1.8.0
+widgetsnbextension==4.0.13
